Sintactico.output
Terminals unused in grammar

   FUNCION_LONG
   MAS_STRING
   PUNTO
   COMENTARIO
   COMENTARIO2
   CONST


Grammar

    0 $accept: inicio $end

    1 inicio: INICIO_PROG declaracion lista_sentencia FIN_PROG END_OF_FILE
    2       | INICIO_PROG declaracion FIN_PROG END_OF_FILE
    3       | INICIO_PROG lista_sentencia FIN_PROG END_OF_FILE
    4       | INICIO_PROG FIN_PROG END_OF_FILE

    5 lista_sentencia: sentencia
    6                | lista_sentencia sentencia

    7 sentencia: iteracion
    8          | decision
    9          | asignacion
   10          | impresion
   11          | ingreso

   12 $@1: %empty

   13 iteracion: WHILE cond DO $@1 lista_sentencia ENDWHILE

   14 $@2: %empty

   15 $@3: %empty

   16 iteracion: WHILE IID IN $@2 CORCHETE_ABRE lista_expresiones CORCHETE_CIERRA $@3 DO lista_sentencia ENDWHILE

   17 lista_expresiones: exp
   18                  | lista_expresiones COMA exp

   19 cond: exp_logica AND exp_logica
   20     | exp_logica OR exp_logica
   21     | exp_logica
   22     | NOT exp_logica

   23 exp_logica: exp comp exp

   24 comp: MAYOR_IGUAL
   25     | MENOR_IGUAL
   26     | DISTINTO
   27     | IGUAL
   28     | MAYOR
   29     | MENOR

   30 exp: exp MAS termino
   31    | exp MENOS termino
   32    | termino
   33    | concatenacion

   34 termino: termino MUL factor
   35        | termino DIV factor
   36        | factor

   37 factor: IID
   38       | cte
   39       | PARENT_ABRE exp PARENT_CIERRA

   40 asignacion: IID ASIGNACION exp

   41 impresion: WRITE IID
   42          | WRITE cadena

   43 ingreso: READ IID

   44 decisionPrimera: IF cond THEN

   45 decision: decisionPrimera lista_sentencia ENDIF
   46         | decisionPrimera lista_sentencia ELSE lista_sentencia ENDIF

   47 declaracion: VAR lista_declaraciones ENDVAR

   48 lista_declaraciones: tipo IID
   49                    | lista_declaraciones tipo IID
   50                    | declaracion_especial
   51                    | lista_declaraciones declaracion_especial

   52 declaracion_especial: tipos_datos_varios DOS_PUNTOS ids_datos_varios

   53 tipos_datos_varios: CORCHETE_ABRE tipos_datos CORCHETE_CIERRA

   54 ids_datos_varios: CORCHETE_ABRE ids_datos CORCHETE_CIERRA

   55 tipos_datos: tipo
   56            | tipo COMA tipos_datos

   57 ids_datos: IID
   58          | IID COMA ids_datos

   59 cte: CONSTANTE_REAL
   60    | CONSTANTE_INT
   61    | CONSTANTE_STRING

   62 concatenacion: cadena CONCATENACION cadena
   63              | IID CONCATENACION cadena
   64              | cadena CONCATENACION IID
   65              | IID CONCATENACION IID
   66              | concatenacion CONCATENACION IID
   67              | concatenacion CONCATENACION cadena

   68 tipo: REAL
   69     | INT
   70     | STRING

   71 cadena: CONSTANTE_STRING

   72 IID: ID


Terminals, with rules where they appear

$end (0) 0
error (256)
INICIO_PROG (258) 1 2 3 4
FIN_PROG (259) 1 2 3 4
WHILE (260) 13 16
DO (261) 13 16
ENDWHILE (262) 13 16
FUNCION_LONG (263)
IN (264) 16
AND (265) 19
OR (266) 20
NOT (267) 22
MAYOR (268) 28
MAYOR_IGUAL (269) 24
MENOR (270) 29
MENOR_IGUAL (271) 25
IGUAL (272) 27
DISTINTO (273) 26
MAS (274) 30
MENOS (275) 31
MUL (276) 34
DIV (277) 35
MAS_STRING (278)
ASIGNACION (279) 40
PARENT_ABRE (280) 39
PARENT_CIERRA (281) 39
WRITE (282) 41 42
READ (283) 43
IF (284) 44
THEN (285) 44
ENDIF (286) 45 46
ELSE (287) 46
COMA (288) 18 56 58
REAL (289) 68
INT (290) 69
STRING (291) 70
CORCHETE_ABRE (292) 16 53 54
CORCHETE_CIERRA (293) 16 53 54
DOS_PUNTOS (294) 52
PUNTO (295)
VAR (296) 47
ENDVAR (297) 47
CONCATENACION (298) 62 63 64 65 66 67
CONSTANTE_STRING (299) 61 71
CONSTANTE_INT (300) 60
CONSTANTE_REAL (301) 59
COMENTARIO (302)
COMENTARIO2 (303)
CONST (304)
ID (305) 72
END_OF_FILE (306) 1 2 3 4


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
inicio (53)
    on left: 1 2 3 4, on right: 0
lista_sentencia (54)
    on left: 5 6, on right: 1 3 6 13 16 45 46
sentencia (55)
    on left: 7 8 9 10 11, on right: 5 6
iteracion (56)
    on left: 13 16, on right: 7
$@1 (57)
    on left: 12, on right: 13
$@2 (58)
    on left: 14, on right: 16
$@3 (59)
    on left: 15, on right: 16
lista_expresiones (60)
    on left: 17 18, on right: 16 18
cond (61)
    on left: 19 20 21 22, on right: 13 44
exp_logica (62)
    on left: 23, on right: 19 20 21 22
comp (63)
    on left: 24 25 26 27 28 29, on right: 23
exp (64)
    on left: 30 31 32 33, on right: 17 18 23 30 31 39 40
termino (65)
    on left: 34 35 36, on right: 30 31 32 34 35
factor (66)
    on left: 37 38 39, on right: 34 35 36
asignacion (67)
    on left: 40, on right: 9
impresion (68)
    on left: 41 42, on right: 10
ingreso (69)
    on left: 43, on right: 11
decisionPrimera (70)
    on left: 44, on right: 45 46
decision (71)
    on left: 45 46, on right: 8
declaracion (72)
    on left: 47, on right: 1 2
lista_declaraciones (73)
    on left: 48 49 50 51, on right: 47 49 51
declaracion_especial (74)
    on left: 52, on right: 50 51
tipos_datos_varios (75)
    on left: 53, on right: 52
ids_datos_varios (76)
    on left: 54, on right: 52
tipos_datos (77)
    on left: 55 56, on right: 53 56
ids_datos (78)
    on left: 57 58, on right: 54 58
cte (79)
    on left: 59 60 61, on right: 38
concatenacion (80)
    on left: 62 63 64 65 66 67, on right: 33 66 67
tipo (81)
    on left: 68 69 70, on right: 48 49 55 56
cadena (82)
    on left: 71, on right: 42 62 63 64 67
IID (83)
    on left: 72, on right: 16 37 40 41 43 48 49 57 58 63 64 65 66


State 0

    0 $accept: . inicio $end

    INICIO_PROG  shift, and go to state 1

    inicio  go to state 2


State 1

    1 inicio: INICIO_PROG . declaracion lista_sentencia FIN_PROG END_OF_FILE
    2       | INICIO_PROG . declaracion FIN_PROG END_OF_FILE
    3       | INICIO_PROG . lista_sentencia FIN_PROG END_OF_FILE
    4       | INICIO_PROG . FIN_PROG END_OF_FILE

    FIN_PROG  shift, and go to state 3
    WHILE     shift, and go to state 4
    WRITE     shift, and go to state 5
    READ      shift, and go to state 6
    IF        shift, and go to state 7
    VAR       shift, and go to state 8
    ID        shift, and go to state 9

    lista_sentencia  go to state 10
    sentencia        go to state 11
    iteracion        go to state 12
    asignacion       go to state 13
    impresion        go to state 14
    ingreso          go to state 15
    decisionPrimera  go to state 16
    decision         go to state 17
    declaracion      go to state 18
    IID              go to state 19


State 2

    0 $accept: inicio . $end

    $end  shift, and go to state 20


State 3

    4 inicio: INICIO_PROG FIN_PROG . END_OF_FILE

    END_OF_FILE  shift, and go to state 21


State 4

   13 iteracion: WHILE . cond DO $@1 lista_sentencia ENDWHILE
   16          | WHILE . IID IN $@2 CORCHETE_ABRE lista_expresiones CORCHETE_CIERRA $@3 DO lista_sentencia ENDWHILE

    NOT               shift, and go to state 22
    PARENT_ABRE       shift, and go to state 23
    CONSTANTE_STRING  shift, and go to state 24
    CONSTANTE_INT     shift, and go to state 25
    CONSTANTE_REAL    shift, and go to state 26
    ID                shift, and go to state 9

    cond           go to state 27
    exp_logica     go to state 28
    exp            go to state 29
    termino        go to state 30
    factor         go to state 31
    cte            go to state 32
    concatenacion  go to state 33
    cadena         go to state 34
    IID            go to state 35


State 5

   41 impresion: WRITE . IID
   42          | WRITE . cadena

    CONSTANTE_STRING  shift, and go to state 36
    ID                shift, and go to state 9

    cadena  go to state 37
    IID     go to state 38


State 6

   43 ingreso: READ . IID

    ID  shift, and go to state 9

    IID  go to state 39


State 7

   44 decisionPrimera: IF . cond THEN

    NOT               shift, and go to state 22
    PARENT_ABRE       shift, and go to state 23
    CONSTANTE_STRING  shift, and go to state 24
    CONSTANTE_INT     shift, and go to state 25
    CONSTANTE_REAL    shift, and go to state 26
    ID                shift, and go to state 9

    cond           go to state 40
    exp_logica     go to state 28
    exp            go to state 29
    termino        go to state 30
    factor         go to state 31
    cte            go to state 32
    concatenacion  go to state 33
    cadena         go to state 34
    IID            go to state 41


State 8

   47 declaracion: VAR . lista_declaraciones ENDVAR

    REAL           shift, and go to state 42
    INT            shift, and go to state 43
    STRING         shift, and go to state 44
    CORCHETE_ABRE  shift, and go to state 45

    lista_declaraciones   go to state 46
    declaracion_especial  go to state 47
    tipos_datos_varios    go to state 48
    tipo                  go to state 49


State 9

   72 IID: ID .

    $default  reduce using rule 72 (IID)


State 10

    3 inicio: INICIO_PROG lista_sentencia . FIN_PROG END_OF_FILE
    6 lista_sentencia: lista_sentencia . sentencia

    FIN_PROG  shift, and go to state 50
    WHILE     shift, and go to state 4
    WRITE     shift, and go to state 5
    READ      shift, and go to state 6
    IF        shift, and go to state 7
    ID        shift, and go to state 9

    sentencia        go to state 51
    iteracion        go to state 12
    asignacion       go to state 13
    impresion        go to state 14
    ingreso          go to state 15
    decisionPrimera  go to state 16
    decision         go to state 17
    IID              go to state 19


State 11

    5 lista_sentencia: sentencia .

    $default  reduce using rule 5 (lista_sentencia)


State 12

    7 sentencia: iteracion .

    $default  reduce using rule 7 (sentencia)


State 13

    9 sentencia: asignacion .

    $default  reduce using rule 9 (sentencia)


State 14

   10 sentencia: impresion .

    $default  reduce using rule 10 (sentencia)


State 15

   11 sentencia: ingreso .

    $default  reduce using rule 11 (sentencia)


State 16

   45 decision: decisionPrimera . lista_sentencia ENDIF
   46         | decisionPrimera . lista_sentencia ELSE lista_sentencia ENDIF

    WHILE  shift, and go to state 4
    WRITE  shift, and go to state 5
    READ   shift, and go to state 6
    IF     shift, and go to state 7
    ID     shift, and go to state 9

    lista_sentencia  go to state 52
    sentencia        go to state 11
    iteracion        go to state 12
    asignacion       go to state 13
    impresion        go to state 14
    ingreso          go to state 15
    decisionPrimera  go to state 16
    decision         go to state 17
    IID              go to state 19


State 17

    8 sentencia: decision .

    $default  reduce using rule 8 (sentencia)


State 18

    1 inicio: INICIO_PROG declaracion . lista_sentencia FIN_PROG END_OF_FILE
    2       | INICIO_PROG declaracion . FIN_PROG END_OF_FILE

    FIN_PROG  shift, and go to state 53
    WHILE     shift, and go to state 4
    WRITE     shift, and go to state 5
    READ      shift, and go to state 6
    IF        shift, and go to state 7
    ID        shift, and go to state 9

    lista_sentencia  go to state 54
    sentencia        go to state 11
    iteracion        go to state 12
    asignacion       go to state 13
    impresion        go to state 14
    ingreso          go to state 15
    decisionPrimera  go to state 16
    decision         go to state 17
    IID              go to state 19


State 19

   40 asignacion: IID . ASIGNACION exp

    ASIGNACION  shift, and go to state 55


State 20

    0 $accept: inicio $end .

    $default  accept


State 21

    4 inicio: INICIO_PROG FIN_PROG END_OF_FILE .

    $default  reduce using rule 4 (inicio)


State 22

   22 cond: NOT . exp_logica

    PARENT_ABRE       shift, and go to state 23
    CONSTANTE_STRING  shift, and go to state 24
    CONSTANTE_INT     shift, and go to state 25
    CONSTANTE_REAL    shift, and go to state 26
    ID                shift, and go to state 9

    exp_logica     go to state 56
    exp            go to state 29
    termino        go to state 30
    factor         go to state 31
    cte            go to state 32
    concatenacion  go to state 33
    cadena         go to state 34
    IID            go to state 41


State 23

   39 factor: PARENT_ABRE . exp PARENT_CIERRA

    PARENT_ABRE       shift, and go to state 23
    CONSTANTE_STRING  shift, and go to state 24
    CONSTANTE_INT     shift, and go to state 25
    CONSTANTE_REAL    shift, and go to state 26
    ID                shift, and go to state 9

    exp            go to state 57
    termino        go to state 30
    factor         go to state 31
    cte            go to state 32
    concatenacion  go to state 33
    cadena         go to state 34
    IID            go to state 41


State 24

   61 cte: CONSTANTE_STRING .
   71 cadena: CONSTANTE_STRING .

    CONCATENACION  reduce using rule 71 (cadena)
    $default       reduce using rule 61 (cte)


State 25

   60 cte: CONSTANTE_INT .

    $default  reduce using rule 60 (cte)


State 26

   59 cte: CONSTANTE_REAL .

    $default  reduce using rule 59 (cte)


State 27

   13 iteracion: WHILE cond . DO $@1 lista_sentencia ENDWHILE

    DO  shift, and go to state 58


State 28

   19 cond: exp_logica . AND exp_logica
   20     | exp_logica . OR exp_logica
   21     | exp_logica .

    AND  shift, and go to state 59
    OR   shift, and go to state 60

    $default  reduce using rule 21 (cond)


State 29

   23 exp_logica: exp . comp exp
   30 exp: exp . MAS termino
   31    | exp . MENOS termino

    MAYOR        shift, and go to state 61
    MAYOR_IGUAL  shift, and go to state 62
    MENOR        shift, and go to state 63
    MENOR_IGUAL  shift, and go to state 64
    IGUAL        shift, and go to state 65
    DISTINTO     shift, and go to state 66
    MAS          shift, and go to state 67
    MENOS        shift, and go to state 68

    comp  go to state 69


State 30

   32 exp: termino .
   34 termino: termino . MUL factor
   35        | termino . DIV factor

    MUL  shift, and go to state 70
    DIV  shift, and go to state 71

    $default  reduce using rule 32 (exp)


State 31

   36 termino: factor .

    $default  reduce using rule 36 (termino)


State 32

   38 factor: cte .

    $default  reduce using rule 38 (factor)


State 33

   33 exp: concatenacion .
   66 concatenacion: concatenacion . CONCATENACION IID
   67              | concatenacion . CONCATENACION cadena

    CONCATENACION  shift, and go to state 72

    $default  reduce using rule 33 (exp)


State 34

   62 concatenacion: cadena . CONCATENACION cadena
   64              | cadena . CONCATENACION IID

    CONCATENACION  shift, and go to state 73


State 35

   16 iteracion: WHILE IID . IN $@2 CORCHETE_ABRE lista_expresiones CORCHETE_CIERRA $@3 DO lista_sentencia ENDWHILE
   37 factor: IID .
   63 concatenacion: IID . CONCATENACION cadena
   65              | IID . CONCATENACION IID

    IN             shift, and go to state 74
    CONCATENACION  shift, and go to state 75

    $default  reduce using rule 37 (factor)


State 36

   71 cadena: CONSTANTE_STRING .

    $default  reduce using rule 71 (cadena)


State 37

   42 impresion: WRITE cadena .

    $default  reduce using rule 42 (impresion)


State 38

   41 impresion: WRITE IID .

    $default  reduce using rule 41 (impresion)


State 39

   43 ingreso: READ IID .

    $default  reduce using rule 43 (ingreso)


State 40

   44 decisionPrimera: IF cond . THEN

    THEN  shift, and go to state 76


State 41

   37 factor: IID .
   63 concatenacion: IID . CONCATENACION cadena
   65              | IID . CONCATENACION IID

    CONCATENACION  shift, and go to state 75

    $default  reduce using rule 37 (factor)


State 42

   68 tipo: REAL .

    $default  reduce using rule 68 (tipo)


State 43

   69 tipo: INT .

    $default  reduce using rule 69 (tipo)


State 44

   70 tipo: STRING .

    $default  reduce using rule 70 (tipo)


State 45

   53 tipos_datos_varios: CORCHETE_ABRE . tipos_datos CORCHETE_CIERRA

    REAL    shift, and go to state 42
    INT     shift, and go to state 43
    STRING  shift, and go to state 44

    tipos_datos  go to state 77
    tipo         go to state 78


State 46

   47 declaracion: VAR lista_declaraciones . ENDVAR
   49 lista_declaraciones: lista_declaraciones . tipo IID
   51                    | lista_declaraciones . declaracion_especial

    REAL           shift, and go to state 42
    INT            shift, and go to state 43
    STRING         shift, and go to state 44
    CORCHETE_ABRE  shift, and go to state 45
    ENDVAR         shift, and go to state 79

    declaracion_especial  go to state 80
    tipos_datos_varios    go to state 48
    tipo                  go to state 81


State 47

   50 lista_declaraciones: declaracion_especial .

    $default  reduce using rule 50 (lista_declaraciones)


State 48

   52 declaracion_especial: tipos_datos_varios . DOS_PUNTOS ids_datos_varios

    DOS_PUNTOS  shift, and go to state 82


State 49

   48 lista_declaraciones: tipo . IID

    ID  shift, and go to state 9

    IID  go to state 83


State 50

    3 inicio: INICIO_PROG lista_sentencia FIN_PROG . END_OF_FILE

    END_OF_FILE  shift, and go to state 84


State 51

    6 lista_sentencia: lista_sentencia sentencia .

    $default  reduce using rule 6 (lista_sentencia)


State 52

    6 lista_sentencia: lista_sentencia . sentencia
   45 decision: decisionPrimera lista_sentencia . ENDIF
   46         | decisionPrimera lista_sentencia . ELSE lista_sentencia ENDIF

    WHILE  shift, and go to state 4
    WRITE  shift, and go to state 5
    READ   shift, and go to state 6
    IF     shift, and go to state 7
    ENDIF  shift, and go to state 85
    ELSE   shift, and go to state 86
    ID     shift, and go to state 9

    sentencia        go to state 51
    iteracion        go to state 12
    asignacion       go to state 13
    impresion        go to state 14
    ingreso          go to state 15
    decisionPrimera  go to state 16
    decision         go to state 17
    IID              go to state 19


State 53

    2 inicio: INICIO_PROG declaracion FIN_PROG . END_OF_FILE

    END_OF_FILE  shift, and go to state 87


State 54

    1 inicio: INICIO_PROG declaracion lista_sentencia . FIN_PROG END_OF_FILE
    6 lista_sentencia: lista_sentencia . sentencia

    FIN_PROG  shift, and go to state 88
    WHILE     shift, and go to state 4
    WRITE     shift, and go to state 5
    READ      shift, and go to state 6
    IF        shift, and go to state 7
    ID        shift, and go to state 9

    sentencia        go to state 51
    iteracion        go to state 12
    asignacion       go to state 13
    impresion        go to state 14
    ingreso          go to state 15
    decisionPrimera  go to state 16
    decision         go to state 17
    IID              go to state 19


State 55

   40 asignacion: IID ASIGNACION . exp

    PARENT_ABRE       shift, and go to state 23
    CONSTANTE_STRING  shift, and go to state 24
    CONSTANTE_INT     shift, and go to state 25
    CONSTANTE_REAL    shift, and go to state 26
    ID                shift, and go to state 9

    exp            go to state 89
    termino        go to state 30
    factor         go to state 31
    cte            go to state 32
    concatenacion  go to state 33
    cadena         go to state 34
    IID            go to state 41


State 56

   22 cond: NOT exp_logica .

    $default  reduce using rule 22 (cond)


State 57

   30 exp: exp . MAS termino
   31    | exp . MENOS termino
   39 factor: PARENT_ABRE exp . PARENT_CIERRA

    MAS            shift, and go to state 67
    MENOS          shift, and go to state 68
    PARENT_CIERRA  shift, and go to state 90


State 58

   13 iteracion: WHILE cond DO . $@1 lista_sentencia ENDWHILE

    $default  reduce using rule 12 ($@1)

    $@1  go to state 91


State 59

   19 cond: exp_logica AND . exp_logica

    PARENT_ABRE       shift, and go to state 23
    CONSTANTE_STRING  shift, and go to state 24
    CONSTANTE_INT     shift, and go to state 25
    CONSTANTE_REAL    shift, and go to state 26
    ID                shift, and go to state 9

    exp_logica     go to state 92
    exp            go to state 29
    termino        go to state 30
    factor         go to state 31
    cte            go to state 32
    concatenacion  go to state 33
    cadena         go to state 34
    IID            go to state 41


State 60

   20 cond: exp_logica OR . exp_logica

    PARENT_ABRE       shift, and go to state 23
    CONSTANTE_STRING  shift, and go to state 24
    CONSTANTE_INT     shift, and go to state 25
    CONSTANTE_REAL    shift, and go to state 26
    ID                shift, and go to state 9

    exp_logica     go to state 93
    exp            go to state 29
    termino        go to state 30
    factor         go to state 31
    cte            go to state 32
    concatenacion  go to state 33
    cadena         go to state 34
    IID            go to state 41


State 61

   28 comp: MAYOR .

    $default  reduce using rule 28 (comp)


State 62

   24 comp: MAYOR_IGUAL .

    $default  reduce using rule 24 (comp)


State 63

   29 comp: MENOR .

    $default  reduce using rule 29 (comp)


State 64

   25 comp: MENOR_IGUAL .

    $default  reduce using rule 25 (comp)


State 65

   27 comp: IGUAL .

    $default  reduce using rule 27 (comp)


State 66

   26 comp: DISTINTO .

    $default  reduce using rule 26 (comp)


State 67

   30 exp: exp MAS . termino

    PARENT_ABRE       shift, and go to state 23
    CONSTANTE_STRING  shift, and go to state 94
    CONSTANTE_INT     shift, and go to state 25
    CONSTANTE_REAL    shift, and go to state 26
    ID                shift, and go to state 9

    termino  go to state 95
    factor   go to state 31
    cte      go to state 32
    IID      go to state 96


State 68

   31 exp: exp MENOS . termino

    PARENT_ABRE       shift, and go to state 23
    CONSTANTE_STRING  shift, and go to state 94
    CONSTANTE_INT     shift, and go to state 25
    CONSTANTE_REAL    shift, and go to state 26
    ID                shift, and go to state 9

    termino  go to state 97
    factor   go to state 31
    cte      go to state 32
    IID      go to state 96


State 69

   23 exp_logica: exp comp . exp

    PARENT_ABRE       shift, and go to state 23
    CONSTANTE_STRING  shift, and go to state 24
    CONSTANTE_INT     shift, and go to state 25
    CONSTANTE_REAL    shift, and go to state 26
    ID                shift, and go to state 9

    exp            go to state 98
    termino        go to state 30
    factor         go to state 31
    cte            go to state 32
    concatenacion  go to state 33
    cadena         go to state 34
    IID            go to state 41


State 70

   34 termino: termino MUL . factor

    PARENT_ABRE       shift, and go to state 23
    CONSTANTE_STRING  shift, and go to state 94
    CONSTANTE_INT     shift, and go to state 25
    CONSTANTE_REAL    shift, and go to state 26
    ID                shift, and go to state 9

    factor  go to state 99
    cte     go to state 32
    IID     go to state 96


State 71

   35 termino: termino DIV . factor

    PARENT_ABRE       shift, and go to state 23
    CONSTANTE_STRING  shift, and go to state 94
    CONSTANTE_INT     shift, and go to state 25
    CONSTANTE_REAL    shift, and go to state 26
    ID                shift, and go to state 9

    factor  go to state 100
    cte     go to state 32
    IID     go to state 96


State 72

   66 concatenacion: concatenacion CONCATENACION . IID
   67              | concatenacion CONCATENACION . cadena

    CONSTANTE_STRING  shift, and go to state 36
    ID                shift, and go to state 9

    cadena  go to state 101
    IID     go to state 102


State 73

   62 concatenacion: cadena CONCATENACION . cadena
   64              | cadena CONCATENACION . IID

    CONSTANTE_STRING  shift, and go to state 36
    ID                shift, and go to state 9

    cadena  go to state 103
    IID     go to state 104


State 74

   16 iteracion: WHILE IID IN . $@2 CORCHETE_ABRE lista_expresiones CORCHETE_CIERRA $@3 DO lista_sentencia ENDWHILE

    $default  reduce using rule 14 ($@2)

    $@2  go to state 105


State 75

   63 concatenacion: IID CONCATENACION . cadena
   65              | IID CONCATENACION . IID

    CONSTANTE_STRING  shift, and go to state 36
    ID                shift, and go to state 9

    cadena  go to state 106
    IID     go to state 107


State 76

   44 decisionPrimera: IF cond THEN .

    $default  reduce using rule 44 (decisionPrimera)


State 77

   53 tipos_datos_varios: CORCHETE_ABRE tipos_datos . CORCHETE_CIERRA

    CORCHETE_CIERRA  shift, and go to state 108


State 78

   55 tipos_datos: tipo .
   56            | tipo . COMA tipos_datos

    COMA  shift, and go to state 109

    $default  reduce using rule 55 (tipos_datos)


State 79

   47 declaracion: VAR lista_declaraciones ENDVAR .

    $default  reduce using rule 47 (declaracion)


State 80

   51 lista_declaraciones: lista_declaraciones declaracion_especial .

    $default  reduce using rule 51 (lista_declaraciones)


State 81

   49 lista_declaraciones: lista_declaraciones tipo . IID

    ID  shift, and go to state 9

    IID  go to state 110


State 82

   52 declaracion_especial: tipos_datos_varios DOS_PUNTOS . ids_datos_varios

    CORCHETE_ABRE  shift, and go to state 111

    ids_datos_varios  go to state 112


State 83

   48 lista_declaraciones: tipo IID .

    $default  reduce using rule 48 (lista_declaraciones)


State 84

    3 inicio: INICIO_PROG lista_sentencia FIN_PROG END_OF_FILE .

    $default  reduce using rule 3 (inicio)


State 85

   45 decision: decisionPrimera lista_sentencia ENDIF .

    $default  reduce using rule 45 (decision)


State 86

   46 decision: decisionPrimera lista_sentencia ELSE . lista_sentencia ENDIF

    WHILE  shift, and go to state 4
    WRITE  shift, and go to state 5
    READ   shift, and go to state 6
    IF     shift, and go to state 7
    ID     shift, and go to state 9

    lista_sentencia  go to state 113
    sentencia        go to state 11
    iteracion        go to state 12
    asignacion       go to state 13
    impresion        go to state 14
    ingreso          go to state 15
    decisionPrimera  go to state 16
    decision         go to state 17
    IID              go to state 19


State 87

    2 inicio: INICIO_PROG declaracion FIN_PROG END_OF_FILE .

    $default  reduce using rule 2 (inicio)


State 88

    1 inicio: INICIO_PROG declaracion lista_sentencia FIN_PROG . END_OF_FILE

    END_OF_FILE  shift, and go to state 114


State 89

   30 exp: exp . MAS termino
   31    | exp . MENOS termino
   40 asignacion: IID ASIGNACION exp .

    MAS    shift, and go to state 67
    MENOS  shift, and go to state 68

    $default  reduce using rule 40 (asignacion)


State 90

   39 factor: PARENT_ABRE exp PARENT_CIERRA .

    $default  reduce using rule 39 (factor)


State 91

   13 iteracion: WHILE cond DO $@1 . lista_sentencia ENDWHILE

    WHILE  shift, and go to state 4
    WRITE  shift, and go to state 5
    READ   shift, and go to state 6
    IF     shift, and go to state 7
    ID     shift, and go to state 9

    lista_sentencia  go to state 115
    sentencia        go to state 11
    iteracion        go to state 12
    asignacion       go to state 13
    impresion        go to state 14
    ingreso          go to state 15
    decisionPrimera  go to state 16
    decision         go to state 17
    IID              go to state 19


State 92

   19 cond: exp_logica AND exp_logica .

    $default  reduce using rule 19 (cond)


State 93

   20 cond: exp_logica OR exp_logica .

    $default  reduce using rule 20 (cond)


State 94

   61 cte: CONSTANTE_STRING .

    $default  reduce using rule 61 (cte)


State 95

   30 exp: exp MAS termino .
   34 termino: termino . MUL factor
   35        | termino . DIV factor

    MUL  shift, and go to state 70
    DIV  shift, and go to state 71

    $default  reduce using rule 30 (exp)


State 96

   37 factor: IID .

    $default  reduce using rule 37 (factor)


State 97

   31 exp: exp MENOS termino .
   34 termino: termino . MUL factor
   35        | termino . DIV factor

    MUL  shift, and go to state 70
    DIV  shift, and go to state 71

    $default  reduce using rule 31 (exp)


State 98

   23 exp_logica: exp comp exp .
   30 exp: exp . MAS termino
   31    | exp . MENOS termino

    MAS    shift, and go to state 67
    MENOS  shift, and go to state 68

    $default  reduce using rule 23 (exp_logica)


State 99

   34 termino: termino MUL factor .

    $default  reduce using rule 34 (termino)


State 100

   35 termino: termino DIV factor .

    $default  reduce using rule 35 (termino)


State 101

   67 concatenacion: concatenacion CONCATENACION cadena .

    $default  reduce using rule 67 (concatenacion)


State 102

   66 concatenacion: concatenacion CONCATENACION IID .

    $default  reduce using rule 66 (concatenacion)


State 103

   62 concatenacion: cadena CONCATENACION cadena .

    $default  reduce using rule 62 (concatenacion)


State 104

   64 concatenacion: cadena CONCATENACION IID .

    $default  reduce using rule 64 (concatenacion)


State 105

   16 iteracion: WHILE IID IN $@2 . CORCHETE_ABRE lista_expresiones CORCHETE_CIERRA $@3 DO lista_sentencia ENDWHILE

    CORCHETE_ABRE  shift, and go to state 116


State 106

   63 concatenacion: IID CONCATENACION cadena .

    $default  reduce using rule 63 (concatenacion)


State 107

   65 concatenacion: IID CONCATENACION IID .

    $default  reduce using rule 65 (concatenacion)


State 108

   53 tipos_datos_varios: CORCHETE_ABRE tipos_datos CORCHETE_CIERRA .

    $default  reduce using rule 53 (tipos_datos_varios)


State 109

   56 tipos_datos: tipo COMA . tipos_datos

    REAL    shift, and go to state 42
    INT     shift, and go to state 43
    STRING  shift, and go to state 44

    tipos_datos  go to state 117
    tipo         go to state 78


State 110

   49 lista_declaraciones: lista_declaraciones tipo IID .

    $default  reduce using rule 49 (lista_declaraciones)


State 111

   54 ids_datos_varios: CORCHETE_ABRE . ids_datos CORCHETE_CIERRA

    ID  shift, and go to state 9

    ids_datos  go to state 118
    IID        go to state 119


State 112

   52 declaracion_especial: tipos_datos_varios DOS_PUNTOS ids_datos_varios .

    $default  reduce using rule 52 (declaracion_especial)


State 113

    6 lista_sentencia: lista_sentencia . sentencia
   46 decision: decisionPrimera lista_sentencia ELSE lista_sentencia . ENDIF

    WHILE  shift, and go to state 4
    WRITE  shift, and go to state 5
    READ   shift, and go to state 6
    IF     shift, and go to state 7
    ENDIF  shift, and go to state 120
    ID     shift, and go to state 9

    sentencia        go to state 51
    iteracion        go to state 12
    asignacion       go to state 13
    impresion        go to state 14
    ingreso          go to state 15
    decisionPrimera  go to state 16
    decision         go to state 17
    IID              go to state 19


State 114

    1 inicio: INICIO_PROG declaracion lista_sentencia FIN_PROG END_OF_FILE .

    $default  reduce using rule 1 (inicio)


State 115

    6 lista_sentencia: lista_sentencia . sentencia
   13 iteracion: WHILE cond DO $@1 lista_sentencia . ENDWHILE

    WHILE     shift, and go to state 4
    ENDWHILE  shift, and go to state 121
    WRITE     shift, and go to state 5
    READ      shift, and go to state 6
    IF        shift, and go to state 7
    ID        shift, and go to state 9

    sentencia        go to state 51
    iteracion        go to state 12
    asignacion       go to state 13
    impresion        go to state 14
    ingreso          go to state 15
    decisionPrimera  go to state 16
    decision         go to state 17
    IID              go to state 19


State 116

   16 iteracion: WHILE IID IN $@2 CORCHETE_ABRE . lista_expresiones CORCHETE_CIERRA $@3 DO lista_sentencia ENDWHILE

    PARENT_ABRE       shift, and go to state 23
    CONSTANTE_STRING  shift, and go to state 24
    CONSTANTE_INT     shift, and go to state 25
    CONSTANTE_REAL    shift, and go to state 26
    ID                shift, and go to state 9

    lista_expresiones  go to state 122
    exp                go to state 123
    termino            go to state 30
    factor             go to state 31
    cte                go to state 32
    concatenacion      go to state 33
    cadena             go to state 34
    IID                go to state 41


State 117

   56 tipos_datos: tipo COMA tipos_datos .

    $default  reduce using rule 56 (tipos_datos)


State 118

   54 ids_datos_varios: CORCHETE_ABRE ids_datos . CORCHETE_CIERRA

    CORCHETE_CIERRA  shift, and go to state 124


State 119

   57 ids_datos: IID .
   58          | IID . COMA ids_datos

    COMA  shift, and go to state 125

    $default  reduce using rule 57 (ids_datos)


State 120

   46 decision: decisionPrimera lista_sentencia ELSE lista_sentencia ENDIF .

    $default  reduce using rule 46 (decision)


State 121

   13 iteracion: WHILE cond DO $@1 lista_sentencia ENDWHILE .

    $default  reduce using rule 13 (iteracion)


State 122

   16 iteracion: WHILE IID IN $@2 CORCHETE_ABRE lista_expresiones . CORCHETE_CIERRA $@3 DO lista_sentencia ENDWHILE
   18 lista_expresiones: lista_expresiones . COMA exp

    COMA             shift, and go to state 126
    CORCHETE_CIERRA  shift, and go to state 127


State 123
